objects/Case/Case.object-meta.xml
<CustomObject>
	<historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>2</archiveRetentionYears>
        <description>HIPAA Audit Log Retention Case</description>
        <gracePeriodDays>0</gracePeriodDays>
    </historyRetentionPolicy>
    <sharingModel>Private</sharingModel>
</CustomObject>