objects/Case/fields/BeginPatientSupportEligibilityCheck__c.field-meta.xml
<CustomField>
    <fullName>BeginPatientSupportEligibilityCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to capture Patient’s confirmation for Service Program</description>
    <label>Begin Patient Support Eligibility Check</label>
    <type>Checkbox</type>
</CustomField>