objects/Case/fields/CancellationComments__c.field-meta.xml
<CustomField>
    <fullName>CancellationComments__c</fullName>
    <description>This Field is used to store Order Cancellation Comments</description>
    <label>Cancellation Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>