objects/Case/fields/CaseOwnerName__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerName__c</fullName>
    <description>Field to display the Case Owner Last Name and First Name</description>
    <formula>Owner:User.FirstName+&apos; &apos;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case Owner</inlineHelpText>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>