objects/Case/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <description>This field is used to indicate type of case whether it is Order Cancellation Case, General Inquiry Case</description>
    <formula>CASE(RecordType.Name,
&apos;General Inquiry&apos;,&apos;General Inquiry Case&apos;,
&apos;Order Cancellation Case&apos;,&apos;Order Cancellation Case&apos;,
&apos;CarePlan&apos;,&apos;CarePlan Case&apos;,&apos;CareGap&apos;,&apos;CareGap Case&apos;,
&apos;&apos;)</formula>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>