objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Categorization of the general inquiry</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
			<value>
                <fullName>Patient Treatment Management</fullName>
            </value>
            <value>
                <fullName>Patient and Caregiver support</fullName>
            </value>
			<value>
                <fullName>Patient Services</fullName>
            </value>
            <value>
                <fullName>Referral Support</fullName>
            </value>
            <value>
                <fullName>Certification Management</fullName>
            </value>
            <value>
                <fullName>IT and Tech Support</fullName>
            </value>
            <value>
                <fullName>Site Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>