objects/Case/fields/DateOfCancellationRequest__c.field-meta.xml
<CustomField>
    <fullName>DateOfCancellationRequest__c</fullName>
    <description>This field holds Created date Value</description>
    <formula>CreatedDate</formula>
    <label>Date of cancellation request</label>
    <type>Date</type>
</CustomField>