objects/Case/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to relate cancellation requested order</description>
    <label>Order ID</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Cancellation Cases</relationshipLabel>
    <relationshipName>OrderCancellationCases</relationshipName>
    <type>Lookup</type>
</CustomField>