objects/Case/fields/ReasonForCancellation__c.field-meta.xml
<CustomField>
    <fullName>ReasonForCancellation__c</fullName>
    <description>This field is used to store Order Cancellation Reason</description>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient withdrew consent for treatment with Janssen CAR-T</fullName>
            </value>
            <value>
                <fullName>Patient health-related reason</fullName>
            </value>
            <value>
                <fullName>Other patient-related reason</fullName>
            </value>
            <value>
                <fullName>Other non-patient related reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>