objects/Case/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Sub-categorization of the general inquiry dependent on the category selected</description>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>General Education Resources</fullName>
            </value>
            <value>
                <fullName>Referral Guidance</fullName>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Certification Inquiries and Information</fullName>
            </value>
            <value>
                <fullName>Login and Password Management</fullName>
            </value>
            <value>
                <fullName>User Training</fullName>
            </value>
            <value>
                <fullName>General Coordination</fullName>
            </value>
			<value>
                <fullName>Site Relationship Management</fullName>
            </value>
            <value>
                <fullName>Treatment Inquiries</fullName>
            </value>
            <value>
                <fullName>New Patient Enrollment / Order Placement</fullName>
            </value>
            <value>
                <fullName>Order Reschedule Requests</fullName>
            </value>
            <value>
                <fullName>Order Cancellation Requests</fullName>
            </value>
            <value>
                <fullName>Drug Product Deliveries</fullName>
            </value>
            <value>
                <fullName>Other Order Related Inquiries</fullName>
            </value>
            <value>
                <fullName>Patient Services – New Request</fullName>
            </value>
            <value>
                <fullName>Patient Services – Enrollment Inquiries</fullName>
            </value>
            <value>
                <fullName>CTEL Support</fullName>
            </value>
            <value>
                <fullName>General Questions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>