objects/Case/recordTypes/GeneralInquiry.recordType-meta.xml
<RecordType>
    <fullName>GeneralInquiry</fullName>
    <active>true</active>
    <businessProcess>GeneralInquiry</businessProcess>
    <description>General Inquiries from the Treatment Sites that are not connected directly connected to the Patient Treatment Journey or Order.</description>
    <label>General Inquiry</label>
</RecordType>