objects/Case/recordTypes/OrderCancellationCase.recordType-meta.xml
<RecordType>
    <fullName>OrderCancellationCase</fullName>
    <active>true</active>
    <businessProcess>OrderCancellationCase</businessProcess>
    <description>This RecordType is used for Creating Cases when Order Cancellation Request is Received</description>
    <label>Order Cancellation Case</label>
</RecordType>