objects/Case/validationRules/PreventDisablingBeginPatientSupportCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventDisablingBeginPatientSupportCheck</fullName>
    <active>true</active>
    <description>This Validation rule prevents users from setting BeginPatientSupportEligibilityCheck__c to false from true on care plan</description>
    <errorConditionFormula>AND(!ISNEW(),RecordType.DeveloperName=&apos;CarePlan&apos;,PRIORVALUE(BeginPatientSupportEligibilityCheck__c)=true,!BeginPatientSupportEligibilityCheck__c)</errorConditionFormula>
    <errorDisplayField>BeginPatientSupportEligibilityCheck__c</errorDisplayField>
    <errorMessage>The interest in Patient Services has already been recorded. This value cannot be changed.</errorMessage>
</ValidationRule>