objects/Case/listViews/OrderCancellationsQueue_Case.listView-meta.xml
<ListView>
    <fullName>OrderCancellationsQueue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>DateOfCancellationRequest__c</columns>
    <columns>ReasonForCancellation__c</columns>
    <columns>TreatmentSite__c</columns>
    <filterScope>Queue</filterScope>
    <label>Order Cancellations Queue</label>
    <language>en_US</language>
    <queue>OrderCancellationsQueue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>