objects/Case/listViews/VeinToVeinManagerQueue_Case.listView-meta.xml
<ListView>
    <fullName>VeinToVeinManagerQueue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Queue</filterScope>
    <label>Vein to Vein Manager Queue</label>
    <queue>VeinToVeinManagerQueue</queue>
    <sharedTo>
        <allInternalUsers/>
        <role>InternalSiteAdministrator</role>
    </sharedTo>
</ListView>